2004-05-17  Dan Winship  <danw@novell.com>

	* configure.in: 1.4.7.2

	* lib/e2k-result.c (sanitize_bad_multistatus): New routine, used
	by e2k_results_array_add_from_multistatus to fix broken Exchange
	XML so recent versions of libxml2 will parse it correctly.
	(#58528)
	(prop_parse): Invert the transformation here so the rest of
	connector still sees the invalid-but-canonical names.

	* lib/e2k-propnames.h.in: add E2K_NS_MAPI_ID_LEN, the length of
	E2K_NS_MAPI_ID.

2004-05-12  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* po/es.po: Added partial Spanish translation

2004-05-11  Dan Winship  <danw@ximian.com>

	* configure.in: Bump version to 1.4.7.1

	* acinclude.m4 (EVO_LDAP_CHECK): Fix this so it works with
	non-Ximian OpenLDAP packages. (Problem noted by Frederic Crozat)

2004-05-11  Dan Winship  <danw@ximian.com>

	* Ximian Connector 1.4.7, first GPL release.
